--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,10 @@ jobs:
 
       - name: Tar modules
         run: |
-          curl -kL https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.1-5.10.55.tgz -o /tmp/epyc7002-7.1-5.10.55.tgz
-          curl -kL https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.2-5.10.55.tgz -o /tmp/epyc7002-7.2-5.10.55.tgz
-          #echo "extract last module pack"
-          #unzip /tmp/modules.zip -d "/tmp/" >/dev/null 2>&1
-          ls -d *-*/ | grep -v -e "arpl-modules/"
-          for D in `ls -d *-*/ | grep epyc7002`; do
+          #curl -kL https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.1-5.10.55.tgz -o /tmp/epyc7002-7.1-5.10.55.tgz
+          #curl -kL https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.2-5.10.55.tgz -o /tmp/epyc7002-7.2-5.10.55.tgz
+          ls -d *-*/ | grep -v -e braswell -e broadwellnkv2 -e broadwellntbap -e purley -e epyc7002
+          for D in `ls -d *-*/ | grep -v -e braswell -e broadwellnkv2 -e broadwellntbap -e purley -e epyc7002`; do
             E=$(echo ${D} | sed 's#/##')
               echo "backup ${E} tcrp modules"
               for file in "$E"/*.ko; do
@@ -28,7 +26,11 @@ jobs:
                   mv -vf "$file" "$new_name"                
                 fi
               done
-              echo "extract ${E} wjz304's arpl-i18n module pack"
+              
+              echo "download last rr ${E} module pack"
+              curl -kL https://github.com/PeterSuh-Q3/arpl-modules/releases/download/rr-last/${E}.tgz -o /tmp/${E}.tgz
+              
+              echo "extract last rr ${E} module pack"
               tar -xaf /tmp/${E}.tgz -C ./${E}/
               echo "restore ${E} tcrp modules"
               for file in "$E"/*.ko.bak; do
@@ -44,7 +46,15 @@ jobs:
             (cd ${E} && tar caf ../${E}.tgz *)
             sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
           done
-          #echo "copy wjz304's firmware.tgz"
+
+          echo "download latest epyc7002 module pack"          
+          curl -kLO https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.1-5.10.55.tgz
+          curl -kLO https://github.com/PeterSuh-Q3/arpl-modules/releases/latest/download/epyc7002-7.2-5.10.55.tgz
+          
+          sha256sum ./epyc7002-7.1-5.10.55.tgz.tgz | awk '{print $1}' | awk '{print $1 " 'epyc7002-7.1-5.10.55.tgz.tgz' modpack.sha256"}' >> files-chksum
+          sha256sum ./epyc7002-7.2-5.10.55.tgz.tgz | awk '{print $1}' | awk '{print $1 " 'epyc7002-7.2-5.10.55.tgz.tgz' modpack.sha256"}' >> files-chksum
+          
+          #echo "copy rr's firmware.tgz"
           #cp -vf /tmp/firmware.tgz ./firmware.tgz
           #sha256sum ./firmware.tgz | awk '{print $1}' | awk '{print $1 " 'firmware.tgz' firmware.sha256"}' >> files-chksum
           cat files-chksum
