--- a/src/5.x/drivers/scsi/Makefile
+++ b/src/5.x/drivers/scsi/Makefile
@@ -127,7 +127,7 @@ obj-$(CONFIG_SCSI_MPT3SAS)	+= mpt3sas/
 #obj-$(CONFIG_SCSI_IBMVFC)	+= ibmvscsi/
 #obj-$(CONFIG_SCSI_HPTIOP)	+= hptiop.o
 #obj-$(CONFIG_SCSI_STEX)		+= stex.o
-#obj-$(CONFIG_SCSI_MVSAS)	+= mvsas/
+obj-$(CONFIG_SCSI_MVSAS)	+= mvsas/
 #obj-$(CONFIG_SCSI_MVUMI)	+= mvumi.o
 #obj-$(CONFIG_PS3_ROM)		+= ps3rom.o
 #obj-$(CONFIG_SCSI_CXGB3_ISCSI)	+= libiscsi.o libiscsi_tcp.o cxgbi/
