--- a/src/5.x/drivers/scsi/Makefile
+++ b/src/5.x/drivers/scsi/Makefile
@@ -98,8 +98,8 @@ obj-$(CONFIG_SCSI_HPSA)		+= hpsa.o
 #obj-$(CONFIG_CXLFLASH)		+= cxlflash/
 #obj-$(CONFIG_MEGARAID_LEGACY)	+= megaraid.o
 #obj-$(CONFIG_MEGARAID_NEWGEN)	+= megaraid/
-#obj-$(CONFIG_MEGARAID_SAS)	+= megaraid/
-obj-$(CONFIG_SCSI_MPT3SAS)	+= mpt3sas/
+obj-y	+= megaraid/
+obj-y	+= mpt3sas/
 #obj-$(CONFIG_SCSI_UFSHCD)	+= ufs/
 #obj-$(CONFIG_SCSI_ACARD)	+= atp870u.o
 #obj-$(CONFIG_SCSI_SUNESP)	+= esp_scsi.o	sun_esp.o
@@ -127,7 +127,7 @@ obj-$(CONFIG_SCSI_MPT3SAS)	+= mpt3sas/
 #obj-$(CONFIG_SCSI_IBMVFC)	+= ibmvscsi/
 #obj-$(CONFIG_SCSI_HPTIOP)	+= hptiop.o
 #obj-$(CONFIG_SCSI_STEX)		+= stex.o
-obj-$(CONFIG_SCSI_MVSAS)	+= mvsas/
+obj-y	+= mvsas/
 #obj-$(CONFIG_SCSI_MVUMI)	+= mvumi.o
 #obj-$(CONFIG_PS3_ROM)		+= ps3rom.o
 #obj-$(CONFIG_SCSI_CXGB3_ISCSI)	+= libiscsi.o libiscsi_tcp.o cxgbi/
