--- a/src/5.x/drivers/scsi/Makefile
+++ b/src/5.x/drivers/scsi/Makefile
@@ -72,7 +72,7 @@ obj-y	+= libsas/
 #obj-$(CONFIG_SCSI_AIC7XXX)	+= aic7xxx/
 #obj-$(CONFIG_SCSI_AIC79XX)	+= aic7xxx/
 #obj-$(CONFIG_SCSI_AACRAID)	+= aacraid/
-obj-y	+= aic94xx/
+obj-$(CONFIG_SCSI_AIC94XX)	+= aic94xx/
 #obj-$(CONFIG_SCSI_PM8001)	+= pm8001/
 #obj-$(CONFIG_SCSI_ISCI)		+= isci/
 #obj-$(CONFIG_SCSI_IPS)		+= ips.o
@@ -127,7 +127,7 @@ obj-y	+= mpt3sas/
 #obj-$(CONFIG_SCSI_IBMVFC)	+= ibmvscsi/
 #obj-$(CONFIG_SCSI_HPTIOP)	+= hptiop.o
 #obj-$(CONFIG_SCSI_STEX)		+= stex.o
-obj-y	+= mvsas/
+obj-$(CONFIG_SCSI_MVSAS)	+= mvsas/
 #obj-$(CONFIG_SCSI_MVUMI)	+= mvumi.o
 #obj-$(CONFIG_PS3_ROM)		+= ps3rom.o
 #obj-$(CONFIG_SCSI_CXGB3_ISCSI)	+= libiscsi.o libiscsi_tcp.o cxgbi/
